tests/NormalTests/paczka1/fuzzy1/79736707.err
Error in line 15: T5cUxG0 A545 -3,1
Error in line 24: EDW A545 56,2
Error in line 30: AB75FK4J A545 55,4
Error in line 36: EDW A545 26,4
